[gd_scene load_steps=4 format=3 uid="uid://c3q5xvk2wf8dl"]

[ext_resource type="Script" path="res://main.gd" id="1_main"]
[ext_resource type="PackedScene" path="res://player.tscn" id="2_player"]
[ext_resource type="PackedScene" path="res://enemy.tscn" id="3_enemy"]

[node name="Main" type="Node2D"]
process_mode = 3
script = ExtResource("1_main")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 20.0
offset_right = 150.0
offset_bottom = 50.0
grow_horizontal = 2
text = "Avoid the red enemies!"
horizontal_alignment = 1

[node name="ScoreLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 50.0
theme_override_font_sizes/font_size = 24
text = "Score: 0"

[node name="LivesLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 20.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(1, 0.3, 0.3, 1)
theme_override_font_sizes/font_size = 24
text = "Lives: 3"

[node name="PowerUpLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -150.0
offset_top = 60.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 1, 0.5, 1)
theme_override_font_sizes/font_size = 32
text = "POWER UP!"
horizontal_alignment = 1

[node name="GameOverLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -120.0
offset_right = 200.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 28
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="NamePrompt" type="Label" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 10.0
offset_right = 150.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 18
text = "Enter your name:"
horizontal_alignment = 1

[node name="NameEntry" type="LineEdit" parent="CanvasLayer/UI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = 45.0
offset_right = 100.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
placeholder_text = "Your name"
alignment = 1
max_length = 10

[node name="ScoreboardLabel" type="Label" parent="CanvasLayer/UI"]
layout_mode = 0
offset_left = 1080.0
offset_top = 20.0
offset_right = 1260.0
offset_bottom = 200.0
theme_override_colors/font_color = Color(1, 0.9, 0.4, 1)
theme_override_font_sizes/font_size = 18
text = "HIGH SCORES
1. ---
2. ---
3. ---
4. ---
5. ---"

[node name="Player" parent="." instance=ExtResource("2_player")]
position = Vector2(640, 360)

[node name="Enemy1" parent="." instance=ExtResource("3_enemy")]
position = Vector2(100, 100)

[node name="Enemy2" parent="." instance=ExtResource("3_enemy")]
position = Vector2(1180, 100)

[node name="Enemy3" parent="." instance=ExtResource("3_enemy")]
position = Vector2(100, 620)

[node name="Enemy4" parent="." instance=ExtResource("3_enemy")]
position = Vector2(1180, 620)
